--- a/static/companyRegister.html
+++ b/static/companyRegister.html
@@ -126,7 +126,7 @@
               <label for="corp_code">
                 <strong>사업자등록번호</strong>
               </label>
-              <div class="TypoBox invalid">
+              <div class="TypoBox invalid" id="redbox">
                 <input
                   name="corp_code"
                   id="corp_code"
@@ -160,6 +160,78 @@
           </div>
         </fieldset>
       </form>
+    </div>
+    <div
+      class="ModalBox modal_notice_message_law show"
+      id="notice_message_law"
+      style="display: block"
+      aria-expanded="true"
+    >
+      <h4 class="Tit">사업자등록번호가 없어요</h4>
+      <div class="ModalCont">
+        <p class="notice_message_txt">
+          사람인은
+          <strong class="txt_blue"
+            >사업자등록번호, 고유번호를 보유한 경우 가입 가능</strong
+          >하며,<br />
+          사업자등록번호가 없는
+          <strong>해외 사업자는 별도 기업 인증 후 가입 가능</strong>합니다.
+        </p>
+        <div class="notice_box">
+          <h5 class="tit">가입 대상 및 기준</h5>
+          <table class="notice_box_tbl">
+            <colgroup>
+              <col style="width: 25%" />
+              <col style="width: 25%" />
+              <col style="width: 25%" />
+              <col style="width: 25%" />
+            </colgroup>
+            <thead>
+              <tr>
+                <th>가입 대상</th>
+                <th>일반기업,<br />개인사업자</th>
+                <th>비영리 단체</th>
+                <th><span class="txt_blue">해외 사업자</span></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>기업 등록 구분</th>
+                <td>사업자등록번호</td>
+                <td>고유번호</td>
+                <td><span class="txt_blue">사업자번호 없음</span></td>
+              </tr>
+              <tr>
+                <th>인증 제출 서류</th>
+                <td colspan="2">
+                  <span class="txt_red">사업자등록증명원</span>
+                </td>
+                <td><span class="txt_blue">해외기업인증서</span></td>
+              </tr>
+            </tbody>
+          </table>
+          <p class="table_bottom_notice">
+            * 사업자등록번호/고유번호 보유 시 [사업자등록증명원] 발급 가능
+          </p>
+        </div>
+        <p class="notice_desc">
+          해외 사업자는 인증 서류를 아래 [문의하기 페이지로 이동] 버튼으로
+          이동하여 접수해 주세요.
+        </p>
+      </div>
+      <div class="BtmArea">
+        <button type="button" class="BtnType SizeM btn_cancel">취소</button>
+        <button
+          type="button"
+          class="BtnType SizeM btn_go_inquiry"
+          onmousedown="pushDataLayer('ga_lead', 'company_join', 'company_join', 'btn_askmail')"
+        >
+          문의하기 페이지로 이동
+        </button>
+      </div>
+      <button type="button" class="BtnClose">
+        <span class="blind">닫기</span>
+      </button>
     </div>
   </body>
   <script src="../static/companyRegister.js"></script>
