--- a/static/companyRegister.html
+++ b/static/companyRegister.html
@@ -182,8 +182,8 @@
                   </div>
                 </div>
               </div>
-              <!-- 클릭시 다른 파일 업로드 할수있는 이미지, -->
-              <!-- <div
+              <!-- 클릭시 다른 파일 업로드 할수있다는 문구 -->
+              <div
                 class="box_file_upload"
                 id="box_file_upload"
                 style="display: none"
@@ -208,7 +208,7 @@
                     클릭시 다른 파일로 변경할 수 있습니다
                   </p>
                 </div>
-              </div> -->
+              </div>
 
               <!-- 파일 검토받기 버튼 -->
               <div
@@ -238,7 +238,7 @@
                 </button>
               </div>
               <!-- 검사 성공 -->
-              <!-- <div
+              <div
                 class="file_upload_completed"
                 id="request_certification_complete"
                 style="display: none"
@@ -251,7 +251,7 @@
                   기업인증이 가능 한 서류 입니다.<br />
                   <strong>회원 가입을 진행 해주세요.</strong>
                 </p>
-              </div> -->
+              </div>
               <div
                 class="InpBox chkbox_next_certi"
                 id="next_certification_check_wrap"
@@ -280,14 +280,14 @@
                 </p>
               </div>
               <!-- 닫기 버튼 누르면 원래 처음 첨부파일 화면으로 돌아감 -->
-              <!-- <button
+              <button
                 type="button"
                 class="btn_close"
                 id="btn_reset_certification"
                 style="display: none"
               >
                 <span class="blind">닫기</span>
-              </button> -->
+              </button>
             </div>
           </div>
           <div class="cont_division">
