--- a/static/companyRegister.html
+++ b/static/companyRegister.html
@@ -207,7 +207,7 @@
                   <p class="file_txt_guide">
                     클릭시 다른 파일로 변경할 수 있습니다
                   </p>
-                </div>
+                 </div>
               </div>
 
               <!-- 파일 검토받기 버튼 -->
@@ -224,6 +224,7 @@
                   파일 검토받기
                 </button>
               </div>
+              <!-- 파일 선택 -->
               <div
                 class="box_btn"
                 id="select_certification_file_wrap"
@@ -233,9 +234,11 @@
                   type="button"
                   class="BtnType BtnTypeRd SizeM btn_certify_file"
                   id="select_certification_file"
+                  for="certification_file"
                 >
                   파일 선택
                 </button>
+                <input type="file" name="" id="certification_file" style="display: none">
               </div>
               <!-- 검사 성공 -->
               <div
@@ -252,6 +255,23 @@
                   <strong>회원 가입을 진행 해주세요.</strong>
                 </p>
               </div>
+              <!-- 검사 실패 -->
+              <div class="file_upload_invalid" id="request_certification_fail" style="display:none">
+                            <p class="file_upload_name"
+                            id="file-fail"></p>
+                            <div class="box_notice">
+                                <p class="txt_notice txt_red" id="certification_fail_msg">판독 불가 서류 입니다.</p>
+                            </div>
+                            <p class="file_txt_guide2">
+                                첨부 서류를 다시 한번 확인해 주세요<br>
+                                <strong>가입 후 해당 서류는 미인증</strong> 될 수 있습니다.
+                            </p>
+                            <div class="box_btn">
+                                <button type="button" class="BtnType SizeM btn_change_file" id="change_confirm_document_file">파일 변경하기
+                                </button>
+                            </div>
+                        </div>
+              <!-- 다음에 인증 -->
               <div
                 class="InpBox chkbox_next_certi"
                 id="next_certification_check_wrap"
